CHATS_SIT/force-app/main/default/objects/batchsit_t_fcompsn_eligty_hist__x.object
<CustomObject>
    <description>batchsit$t_fcompsn_eligty_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_fcompsn_eligty_hist</externalName>
    <fields>
        <fullName>amt_clg_county_new__c</fullName>
        <description>amt_clg_county_new</description>
        <externalDeveloperName>amt_clg_county_new</externalDeveloperName>
        <label>New County Ceiling Amount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amt_clg_county_og__c</fullName>
        <description>amt_clg_county_og</description>
        <externalDeveloperName>amt_clg_county_og</externalDeveloperName>
        <label>Ongoing County Ceiling Amount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amt_copay_ft__c</fullName>
        <description>amt_copay_ft</description>
        <externalDeveloperName>amt_copay_ft</externalDeveloperName>
        <label>Full Time Copay Amount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amt_copay_pt__c</fullName>
        <description>amt_copay_pt</description>
        <externalDeveloperName>amt_copay_pt</externalDeveloperName>
        <label>Part Time Copay Amount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amt_ddtn_total_annual__c</fullName>
        <description>amt_ddtn_total_annual</description>
        <externalDeveloperName>amt_ddtn_total_annual</externalDeveloperName>
        <label>Calculated Annual Deductions</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amt_fpg_pctg__c</fullName>
        <description>amt_fpg_pctg</description>
        <externalDeveloperName>amt_fpg_pctg</externalDeveloperName>
        <label>Percentage FPG</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amt_grant_total_annual__c</fullName>
        <description>amt_grant_total_annual</description>
        <externalDeveloperName>amt_grant_total_annual</externalDeveloperName>
        <label>Total Grant Amount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amt_income_annual__c</fullName>
        <description>amt_income_annual</description>
        <externalDeveloperName>amt_income_annual</externalDeveloperName>
        <label>Annual Income amount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amt_income_county_max__c</fullName>
        <description>amt_income_county_max</description>
        <externalDeveloperName>amt_income_county_max</externalDeveloperName>
        <label>Maximum county income Amount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amt_income_gross_annual__c</fullName>
        <description>amt_income_gross_annual</description>
        <externalDeveloperName>amt_income_gross_annual</externalDeveloperName>
        <label>Gross Annual Income</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amt_income_smi__c</fullName>
        <description>amt_income_smi</description>
        <externalDeveloperName>amt_income_smi</externalDeveloperName>
        <label>SMI Income Amount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_cat_prog__c</fullName>
        <description>cde_cat_prog</description>
        <externalDeveloperName>cde_cat_prog</externalDeveloperName>
        <label>Category Program Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_income_result__c</fullName>
        <description>cde_income_result</description>
        <externalDeveloperName>cde_income_result</externalDeveloperName>
        <label>Income Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_prog__c</fullName>
        <description>cde_prog</description>
        <externalDeveloperName>cde_prog</externalDeveloperName>
        <label>Program Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_reason_change_fcompsn__c</fullName>
        <description>cde_reason_change_fcompsn</description>
        <externalDeveloperName>cde_reason_change_fcompsn</externalDeveloperName>
        <label>Family Composition Reason Change Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_reason_ovrd__c</fullName>
        <description>cde_reason_ovrd</description>
        <externalDeveloperName>cde_reason_ovrd</externalDeveloperName>
        <label>Override Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnt_chldrn_rqng_care__c</fullName>
        <description>cnt_chldrn_rqng_care</description>
        <externalDeveloperName>cnt_chldrn_rqng_care</externalDeveloperName>
        <label>count of children requesting care</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>createdbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>createdbyid</description>
        <externalDeveloperName>createdbyid</externalDeveloperName>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_fcompsn_eligty_hist1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_created_hist__c</fullName>
        <description>dte_created_hist</description>
        <externalDeveloperName>dte_created_hist</externalDeveloperName>
        <label>History Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>idn_case__c</fullName>
        <description>idn_case</description>
        <externalDeveloperName>idn_case</externalDeveloperName>
        <label>Case ID</label>
        <length>80</length>
        <referenceTargetField>T_SBSD_CASE__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_SBSD_CASE__c</referenceTo>
        <relationshipLabel>Household Eligibility Legacy History</relationshipLabel>
        <relationshipName>batchsit_t_fcompsn_eligty_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_eligty_fcompsn__c</fullName>
        <description>idn_eligty_fcompsn</description>
        <externalDeveloperName>idn_eligty_fcompsn</externalDeveloperName>
        <label>Eligibility Family Composition ID</label>
        <length>50</length>
        <referenceTo>batchsit_t_fcompsn_eligty__x</referenceTo>
        <relationshipLabel>Household Eligibility Legacy History</relationshipLabel>
        <relationshipName>batchsit_t_fcompsn_eligty_hist</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>idn_eligty_fcompsn_advrs__c</fullName>
        <description>idn_eligty_fcompsn_advrs</description>
        <externalDeveloperName>idn_eligty_fcompsn_advrs</externalDeveloperName>
        <label>Eligibility Family Composition Advisors</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_eligty_fcompsn_hist__c</fullName>
        <description>idn_eligty_fcompsn_hist</description>
        <externalDeveloperName>idn_eligty_fcompsn_hist</externalDeveloperName>
        <label>Eligibility Family Composition Hist ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_prog_fcompsn__c</fullName>
        <description>idn_prog_fcompsn</description>
        <externalDeveloperName>idn_prog_fcompsn</externalDeveloperName>
        <label>Eligibility Family Composition Program</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_run_eligty__c</fullName>
        <description>idn_run_eligty</description>
        <externalDeveloperName>idn_run_eligty</externalDeveloperName>
        <label>Run Eligibility ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_fcompsn_eligty_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical Deleted Record</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_size_fcompsn__c</fullName>
        <description>nbr_size_fcompsn</description>
        <externalDeveloperName>nbr_size_fcompsn</externalDeveloperName>
        <label>Family Composition size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>txt_cmt_ovrd__c</fullName>
        <description>txt_cmt_ovrd</description>
        <externalDeveloperName>txt_cmt_ovrd</externalDeveloperName>
        <label>Override Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_values_comptd_xml__c</fullName>
        <description>txt_values_comptd_xml</description>
        <externalDeveloperName>txt_values_comptd_xml</externalDeveloperName>
        <label>XML Computed Values</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Household Eligibility History</label>
    <pluralLabel>Household Eligibility History</pluralLabel>
</CustomObject>